--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="flex-col">
 
           <figure>
-            <img src="assets/img/python.png" alt="python">
+            <img src="assets/img/python.png" alt="python" width="200px">
             <figcaption>python</figcaption>
           </figure>
 
@@ -87,7 +87,7 @@
         <div class="flex-col">
 
           <figure>
-            <img src="assets/img/JavaScript-logo.png" alt="Java Script">
+            <img src="assets/img/JavaScript-logo.png" alt="Java Script" width="200px">
             <figcaption>Java Script</figcaption>
           </figure>
 
@@ -125,37 +125,37 @@
         <ul>
 
           <li>
-            <img src="assets/img/html-css.png" alt="">
+            <img src="assets/img/html-css.png" alt="" width="200px">
             <h3>Html/Css</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
 
           <li>
-            <img src="assets/img/js.png" alt="">
+            <img src="assets/img/js.png" alt="" width="200px">
             <h3>JavaScript</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
 
           <li>
-            <img src="assets/img/react.png" alt="">
+            <img src="assets/img/react.png" alt="" width="200px">
             <h3>React</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
 
           <li>
-            <img src="assets/img/py.webp" alt="">
+            <img src="assets/img/py.webp" alt="" width="200px">
             <h3>Python</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
 
           <li>
-            <img src="assets/img/dj.png" alt="">
+            <img src="assets/img/dj.png" alt="" width="200px">
             <h3>Django</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
 
           <li>
-            <img src="assets/img/multitasking.svg" alt="">
+            <img src="assets/img/multitasking.svg" alt="" width="200px">
             <h3 style="color:#303030;">Soft Skills</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
