--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <img src="assets/img/logo.svg" alt="Logo Kenzie Academy">
         <figcaption>Logo Kenzie Academy</figcaption>
       </figure>
-
-      <!-- MENU DE NAVEGAÇÃO -->
+      <div class="sandwich">
+        <img src="assets/img/sandwich.png" alt="" width="50px" background-color="red";
+      </div>
       <nav>
         <ul>
           <li><a href="#1">Sobre a Kenzie</a></li>
@@ -75,15 +76,14 @@
 
         <!-- COLUNA DIREITA -->
         <div class="flex-col">
-
           <figure>
-            <img src="assets/img/python.png" alt="python" width="200px">
+            <img src="assets/img/python.png" alt="python" height="200px">
             <figcaption>python</figcaption>
           </figure>
-
         </div>
 
         <!-- COLUNA ESQUERDA -->
+        <div class="js">
         <div class="flex-col">
 
           <figure>
@@ -106,7 +106,8 @@
           </ul>
 
         </div>
-
+      </div>
+      </div>
 
 
       </article>
@@ -125,7 +126,7 @@
         <ul>
 
           <li>
-            <img src="assets/img/html-css.png" alt="" width="200px">
+            <img src="assets/img/html-css.png" alt="" height="140px" width="220px">
             <h3>Html/Css</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
@@ -149,7 +150,7 @@
           </li>
 
           <li>
-            <img src="assets/img/dj.png" alt="" width="200px">
+            <img src="assets/img/dj.png" alt="" width="150px">
             <h3>Django</h3>
             <p>The standard Lorem Ipsum passage,<br> used since the 1500s</p>
           </li>
