--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
 
     <header class="topo">
+        <label for="menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
 
         <div class="large-container">
 
@@ -21,15 +26,18 @@
                 <figcaption>Logo Kenzie Academy</figcaption>
             </figure>
 
-
+            <input type="checkbox" id="menu" />
             <nav>
+
                 <ul>
-                    <li><a href="#1">Sobre a Kenzie</a></li>
-                    <li><a href="#2">Agenda</a></li>
-                    <li><a href="#3">Contato</a></li>
+                    <li><a href="#1">Sobre a Kenzie</a></li><br>
+                    <li><a href="#2">Agenda</a></li><br>
+                    <li><a href="#3">Contato</a></li><br>
                 </ul>
             </nav>
         </div>
+
+
 
     </header>
 
@@ -50,68 +58,67 @@
             </div>
 
         </section>
-        <!--
+        <div class="hidden">
 
-        <section class="secaoSobre">
+            <section class="secaoSobre">
 
-            <article class="flex">
-
-
-                <div class="flex-col">
-
-                    <h2>LOREM IPSUM DOLOR SIT PYTHON</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit deleniti incidunt nam quibusdam fugit reprehenderit aperiam temporibus, maiores dolores molestias cupiditate maxime repudiandae sunt voluptatibus commodi tenetur dolorum
-                        ipsa sequi.
-                    </p>
-
-                    <span>Consectetur adipisicing elit 5 Suscipit deleniti incidunt nam quibusdam fugit reprehenderit aperiam.</span>
-
-                    <button>Subscribe</button>
-
-                </div>
+                <article class="flex">
 
 
-                <div class="flex-col">
+                    <div class="flex-col">
 
-                    <figure>
-                        <img src="assets/img/python.png" alt="python">
-                        <figcaption>python</figcaption>
-                    </figure>
+                        <h2>LOREM IPSUM DOLOR SIT PYTHON</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit deleniti incidunt nam quibusdam fugit reprehenderit aperiam temporibus, maiores dolores molestias cupiditate maxime repudiandae sunt voluptatibus commodi tenetur
+                            dolorum ipsa sequi.
+                        </p>
 
-                </div>
+                        <span>Consectetur adipisicing elit 5 Suscipit deleniti incidunt nam quibusdam fugit reprehenderit aperiam.</span>
 
+                        <button>Subscribe</button>
 
-                <div class="flex-col">
-
-                    <figure>
-                        <img src="assets/img/JavaScript-logo.png" alt="Java Script">
-                        <figcaption>Java Script</figcaption>
-                    </figure>
-
-                </div>
+                    </div>
 
 
-                <div class="flex-col">
+                    <div class="flex-col">
 
-                    <h2> LOREM IPSUM DOLOR SIT JAVASCRIPT</h2>
-                    <ul>
-                        <li>The standard Lorem Ipsum passage, used since the 1500s</li>
-                        <li>Section 1.10.32 of "de Finibus Bonorum et Malorum" by Cicero in 45 BC</li>
-                        <li>1914 translation by H. Rackham</li>
-                        <li>Section 1.10.33 of "de Finibus Bonorum et Malorum", by Cicero in 45 BC</li>
-                        <li>1914 translation by H. Rackham</li>
-                    </ul>
+                        <figure>
+                            <img src="assets/img/python.png" alt="python">
+                            <figcaption>python</figcaption>
+                        </figure>
 
-                </div>
+                    </div>
 
 
+                    <div class="flex-col">
 
-            </article>
+                        <figure>
+                            <img src="assets/img/JavaScript-logo.png" alt="Java Script">
+                            <figcaption>Java Script</figcaption>
+                        </figure>
 
-        </section>
+                    </div>
 
-    -->
-        <!-- <section class="secaoCursos">
+
+                    <div class="flex-col">
+
+                        <h2> LOREM IPSUM DOLOR SIT JAVASCRIPT</h2>
+                        <ul>
+                            <li>The standard Lorem Ipsum passage, used since the 1500s</li>
+                            <li>Section 1.10.32 of "de Finibus Bonorum et Malorum" by Cicero in 45 BC</li>
+                            <li>1914 translation by H. Rackham</li>
+                            <li>Section 1.10.33 of "de Finibus Bonorum et Malorum", by Cicero in 45 BC</li>
+                            <li>1914 translation by H. Rackham</li>
+                        </ul>
+
+                    </div>
+
+
+
+                </article>
+
+            </section>
+        </div>
+        <section class="secaoCursos">
 
             <article>
                 <div class="topCursos">
@@ -160,7 +167,7 @@
                 </ul>
 
             </article>
-        -->
+
         </section>
 
         <section class="secaoCalendar">
@@ -170,7 +177,7 @@
 
 
             <ul class="calendario">
-                <!--
+
                 <li>
                     <span class="calendario-data">22/02</span>
                     <h3>HTML/CSS</h3>
@@ -180,17 +187,17 @@
                         <button>Sign Up</button>
                     </div>
                 </li>
-            -->
+
                 <li>
                     <span class="calendario-data">23/02</span>
                     <h3>JavaScript</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur quae commodi sed eos repellendus adipisci architecto provident, et animi sapiente, rerum fugit quod voluptatum officia ipsum maxime nobis explicabo!</p>
                     <div class="calendario-data-rodape">
-                        <span>7mp</span>
+                        <span>7pm</span>
                         <button>Sign Up</button>
                     </div>
                 </li>
-                <!--
+
                 <li>
                     <span class="calendario-data">24/02</span>
                     <h3>Python</h3>
@@ -200,10 +207,11 @@
                         <button>Sign Up</button>
                     </div>
                 </li>
-            -->
+                -->
             </ul>
 
         </section>
+        </div>
 
         <section class="secaoContato">
 
@@ -247,9 +255,9 @@
                             <label for="mensagem">E-mail</label>
                             <textarea name="mensagem" id="mensagem"></textarea>
                         </div>
-
-                        <input type="submit" value="Send">
-
+                        <div class="form-submit-model">
+                            <input type="submit" value="Send">
+                        </div>
                     </form>
 
                 </div>
