--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon-96x96.webp">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/858558379e.js" crossorigin="anonymous"></script>
     <title>Landing Page Kenzie Academy</title>
+
 </head>
 
 <body>
@@ -225,9 +227,14 @@
                         <p>Contact us and we'll get back to you within 24 hours.</p>
 
                         <ul>
-                            <li><a href="#">Chicago, US</a> </li>
-                            <li><a href="tel:001515151515">+00 1515151515</a></li>
-                            <li><a href="malito:myemail@something.com">myemail@something.com</a></li>
+
+                            <li>
+                                <a class="fas fa-map-marker-alt">Chicago, US</a>
+                            </li>
+                            <li>
+                                <a class="fas fa-mobile-alt"> +00 1515151515</a>
+                            </li>
+                            <li><a class="fas fa-envelope">myemail@something.com</a></li>
                         </ul>
 
                     </div>
@@ -235,28 +242,29 @@
                 </div>
 
 
-                <div class="flex-col">
+                <div class="flex-col ">
 
                     <h2>Contact</h2>
 
-                    <form action="">
+                    <form action=" ">
+                        <div class="Contatoflex ">
+                            <div class="form-input-model ">
+                                <label for="nome ">Nome</label>
+                                <input type="text " placeholder="Name " id="nome " name="nome ">
+                            </div>
 
-                        <div class="form-input-model">
-                            <label for="nome">Nome</label>
-                            <input type="text" placeholder="Name" id="nome" name="nome">
+                            <div class="form-input-model ">
+                                <label for="email ">E-mail</label>
+                                <input type="text " placeholder="E-mail " id="email " name="email ">
+                            </div>
                         </div>
 
-                        <div class="form-input-model">
-                            <label for="email">E-mail</label>
-                            <input type="text" placeholder="E-mail" id="email" name="email">
+                        <div class="form-input-model ">
+                            <label for="mensagem ">E-mail</label>
+                            <textarea name="mensagem " id="mensagem "></textarea>
                         </div>
-
-                        <div class="form-input-model">
-                            <label for="mensagem">E-mail</label>
-                            <textarea name="mensagem" id="mensagem"></textarea>
-                        </div>
-                        <div class="form-submit-model">
-                            <input type="submit" value="Send">
+                        <div class="form-submit-model ">
+                            <input type="submit " value="Send ">
                         </div>
                     </form>
 
@@ -269,10 +277,10 @@
     </main>
 
     <footer>
-        <p>Kenzie Academy - <a href="kenzie.com.br">kenzie.com.br</a></p>
+        <p>Kenzie Academy - <a href="kenzie.com.br ">kenzie.com.br</a></p>
     </footer> -->
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js "></script>
 </body>
 
 </html>
