--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <button>Subscribe</button>
 
         </div>
-    
+
         <!-- COLUNA DIREITA -->
         <div class="pythonImg">
           <figure>
@@ -83,18 +83,18 @@
             <figcaption>python</figcaption>
           </figure>
         </div>
+      </div>
+      <!-- COLUNA ESQUERDA -->
+      <div class="js">
+        <div class="jsImg">
+          <figure>
+            <img src="assets/img/JavaScript-logo.png" alt="Java Script" width="180px">
+            <figcaption>Java Script</figcaption>
+          </figure>
         </div>
-        <!-- COLUNA ESQUERDA -->
-        <div class="js">
-          <div class="jsImg">
-            <figure>
-              <img src="assets/img/JavaScript-logo.png" alt="Java Script" width="180px">
-              <figcaption>Java Script</figcaption>
-            </figure>
-          </div>
 
-          <!-- COLUNA DIREITA -->
-          <div class="jsText">
+        <!-- COLUNA DIREITA -->
+        <div class="jsText">
           <h2> LOREM IPSUM DOLOR SIT JAVASCRIPT</h2>
           <ul>
             <li>The standard Lorem Ipsum passage, used since the 1500s</li>
@@ -104,7 +104,7 @@
             <li>1914 translation by H. Rackham</li>
           </ul>
         </div>
-        </div>
+      </div>
       </div>
     </section>
 
@@ -212,51 +212,46 @@
 
     <section class="secaoContato">
 
-      <div class="flex">
+      <div class="secaoContato-informacoes">
 
-        <div class="flex-col">
+        <p>Contact us and we'll get back to you within 24 hours.</p>
 
-          <div class="secaoContato-informacoes">
+        <ul>
+          <li>Chicago, US</li>
+          <li>+00 1515151515</li>
+          <li>myemail@something.com</li>
+        </ul>
 
-            <p>Contact us and we'll get back to you within 24 hours.</p>
+      </div>
 
-            <ul>
-              <li><a href="#">Chicago, US</a> </li>
-              <li><a href="tel:001515151515">+00 1515151515</a></li>
-              <li><a href="malito:myemail@something.com">myemail@something.com</a></li>
-            </ul>
 
-          </div>
 
-        </div>
-        <div class="flex-col">
-
-          <h2>Contact</h2>
-          <form action="">
-            <div class="Contatoflex ">
-              <div class="form-input-model">
-                <label for="nome"></label>
-                <input type="text" placeholder="Name" id="nome" name="nome">
-              </div>
-
-              <div class="form-input-model">
-                <label for="email"></label>
-                <input type="text" placeholder="E-mail" id="email" name="email">
-              </div>
+      <div class="secaoContatoInput">
+        <h2>Contact</h2>
+        <form action="">
+          <div class="contatoFlex">
+            <div class="form-input-model">
+              <label for="nome"></label>
+              <input type="text" placeholder="Name" id="nome" name="nome">
             </div>
 
             <div class="form-input-model">
-              <label for="mensagem"></label>
-              <textarea name="mensagem" placeholder="Comment" id="mensagem"></textarea>
+              <label for="email"></label>
+              <input type="text" placeholder="E-mail" id="email" name="email">
             </div>
-            <div class="form-submit-model">
-              <input type="submit" value="Send">
-            </div>
-          </form>
+          </div>
 
-        </div>
+          <div class="form-input-model">
+            <label for="mensagem"></label>
+            <textarea name="mensagem" placeholder="Comment" id="mensagem"></textarea>
+          </div>
+          <div class="form-submit-model">
+            <input type="submit" value="Send">
+          </div>
 
+        </form>
       </div>
+
 
     </section>
 
