Fixed desktop nav menu, added hover, fixed width

--- a/index.html
+++ b/index.html
@@ -24,16 +24,23 @@
       <figure>
         <img src="assets/img/logo.svg" alt="Logo Kenzie Academy" width="100px">
         <figcaption>Logo Kenzie Academy</figcaption>
+
+      <div id="navD">
+        <li><div class='a'>Sobre a Kenzie</div></li><br>
+        <li><div class='a'>Preços</div></li><br>
+        <li><div class='a'>Contato</div></li><br>
+      </div>
       </figure>
 
       <input type="checkbox" id="menu" />
-      <nav>
+      <nav id='navM'>
         <ul>
           <li><a href="#1">Sobre a Kenzie</a></li><br>
-          <li><a href="#2">Agenda</a></li><br>
+          <li><a href="#2">Preços</a></li><br>
           <li><a href="#3">Contato</a></li><br>
         </ul>
       </nav>
+
     </div>
 
   </header>
