--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur quae commodi sed eos repellendus
             adipisci architecto provident, et animi sapiente, rerum fugit quod voluptatum officia ipsum maxime nobis
             explicabo!</p>
+            <div class="calHr"></div>
           <div class="calendario-data-rodape">
             <span>7pm</span>
             <button>Sign Up</button>
@@ -194,6 +195,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur quae commodi sed eos repellendus
             adipisci architecto provident, et animi sapiente, rerum fugit quod voluptatum officia ipsum maxime nobis
             explicabo!</p>
+          <div class="calHr"></div>
           <div class="calendario-data-rodape">
             <span>7pm</span>
             <button>Sign Up</button>
@@ -206,6 +208,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consectetur quae commodi sed eos repellendus
             adipisci architecto provident, et animi sapiente, rerum fugit quod voluptatum officia ipsum maxime nobis
             explicabo!</p>
+            <div class="calHr"></div>
           <div class="calendario-data-rodape">
             <span>7pm</span>
             <button>Sign Up</button>
@@ -224,9 +227,9 @@
         <p>Contact us and we'll get back to you within 24 hours.</p>
 
         <ul>
-          <li>Chicago, US</li>
-          <li>+00 1515151515</li>
-          <li>myemail@something.com</li>
+          <li><img src="assets/img/local.png"> Chicago, US</li>
+          <li><img src="assets/img/tel.png">+00 1515151515</li>
+          <li><img src="assets/img/email.png">myemail@something.com</li>
         </ul>
 
       </div>
